Tested bench parser on c7552